# opengl-setting

./: .gitignore  CMakeLists.txt  main.cpp
